--- a/_posts/1337-01-01-Sandworm.md
+++ b/_posts/1337-01-01-Sandworm.md
@@ -5,7 +5,7 @@ categories: [Hack The Box,Notes]
 tags: [HTB,CTFs,Notes,Threat Intelligence]
 ---
 # Sherlocks UFO-1 HTB Writeup 
-![alt text](<Screenshot 2025-06-11 172818-1.png>)
+![alt text](sherlock.png)
 
 Sherlock Scenario :
 ```text
