--- a/_posts/1337-01-01-Sea.md
+++ b/_posts/1337-01-01-Sea.md
@@ -29,3 +29,5 @@ Nmap done: 1 IP address (1 host up) scanned in 108.73 seconds
 Okay now we see only ssh and http so lets try to access the website from the browser \
 We got this cool looking site 
 ![alt text](image-2.png)
+if we checked with wappalyzer we will find it was wrote using PHP
+![alt text](image-3.png)
