--- a/_posts/1337-01-01-Sea.md
+++ b/_posts/1337-01-01-Sea.md
@@ -4,7 +4,7 @@ date: 1337-01-04 00:00:00
 categories: [Hack The Box,Notes]
 tags: [HTB,CTFs,OSCP]
 ---
-![alt text](sea.png)
+![alt text](./Sea.png)
 
 # Enumeration
 ```bash
@@ -28,6 +28,36 @@ Nmap done: 1 IP address (1 host up) scanned in 108.73 seconds
 ```
 Okay now we see only ssh and http so lets try to access the website from the browser \
 We got this cool looking site 
-![alt text](image-2.png)
+![alt text](./image-2.png)
 if we checked with wappalyzer we will find it was wrote using PHP
-![alt text](image-3.png)
+![alt text](./image-3.png) \
+We also found contact.php page 
+![](./image-4.png)
+Let's try to dir brute force using gobuster
+```bash
+┌──(kareem㉿Kali)-[~/sea]
+└─$ gobuster dir -u http://sea.htb/ -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt -x txt,asp,aspx,html
+===============================================================
+Gobuster v3.6
+by OJ Reeves (@TheColonial) & Christian Mehlmauer (@firefart)
+===============================================================
+[+] Url:                     http://sea.htb/
+[+] Method:                  GET
+[+] Threads:                 10
+[+] Wordlist:                /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt
+[+] Negative Status codes:   404
+[+] User Agent:              gobuster/3.6
+[+] Extensions:              asp,aspx,html,txt
+[+] Timeout:                 10s
+===============================================================
+Starting gobuster in directory enumeration mode
+===============================================================
+/.html                (Status: 403) [Size: 199]
+/home                 (Status: 200) [Size: 3650]
+/0                    (Status: 200) [Size: 3650]
+/themes               (Status: 301) [Size: 230] [--> http://sea.htb/themes/]
+/data                 (Status: 301) [Size: 228] [--> http://sea.htb/data/]
+/plugins              (Status: 301) [Size: 231] [--> http://sea.htb/plugins/]
+/messages             (Status: 301) [Size: 232] [--> http://sea.htb/messages/]
+/404                  (Status: 200) [Size: 3341]
+```
