--- a/_posts/1337-01-01-Sea.md
+++ b/_posts/1337-01-01-Sea.md
@@ -61,3 +61,70 @@ Starting gobuster in directory enumeration mode
 /messages             (Status: 301) [Size: 232] [--> http://sea.htb/messages/]
 /404                  (Status: 200) [Size: 3341]
 ```
+After checking these pages all of them are forbidden and nothing useful :
+![alt text](../pics/image-5.png)
+okay let's try to brute force on themes dir 
+```bash
+┌──(kareem㉿Kali)-[~/sea]
+└─$ gobuster dir -u http://sea.htb/themes/ -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt -x txt,asp,aspx,html
+===============================================================
+Gobuster v3.6
+by OJ Reeves (@TheColonial) & Christian Mehlmauer (@firefart)
+===============================================================
+[+] Url:                     http://sea.htb/themes/
+[+] Method:                  GET
+[+] Threads:                 10
+[+] Wordlist:                /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt
+[+] Negative Status codes:   404
+[+] User Agent:              gobuster/3.6
+[+] Extensions:              aspx,html,txt,asp
+[+] Timeout:                 10s
+===============================================================
+Starting gobuster in directory enumeration mode
+===============================================================
+/.html                (Status: 403) [Size: 199]
+/home                 (Status: 200) [Size: 3650]
+/404                  (Status: 200) [Size: 3341]
+/%20                  (Status: 403) [Size: 199]
+/%20.asp              (Status: 403) [Size: 199]
+/%20.aspx             (Status: 403) [Size: 199]
+/%20.html             (Status: 403) [Size: 199]
+/%20.txt              (Status: 403) [Size: 199]
+/bike                 (Status: 301) [Size: 235] [--> http://sea.htb/themes/bike/]
+```
+and here we found /bike/ but after checking it, it was also forbidden so lets brute for this path again /bike/ but let's use different tool this time like `feroxbuster` since i just downloaded it and new to it xD
+```bash
+┌──(kareem㉿Kali)-[~/sea]
+└─$ feroxbuster --url http://sea.htb/themes/bike/
+                                                                                                                                           
+ ___  ___  __   __     __      __         __   ___
+|__  |__  |__) |__) | /  `    /  \ \_/ | |  \ |__
+|    |___ |  \ |  \ | \__,    \__/ / \ | |__/ |___
+by Ben "epi" Risher 🤓                 ver: 2.11.0
+───────────────────────────┬──────────────────────
+ 🎯  Target Url            │ http://sea.htb/themes/bike/
+ 🚀  Threads               │ 50
+ 📖  Wordlist              │ /usr/share/seclists/Discovery/Web-Content/raft-medium-directories.txt
+ 👌  Status Codes          │ All Status Codes!
+ 💥  Timeout (secs)        │ 7
+ 🦡  User-Agent            │ feroxbuster/2.11.0
+ 💉  Config File           │ /etc/feroxbuster/ferox-config.toml
+ 🔎  Extract Links         │ true
+ 🏁  HTTP methods          │ [GET]
+ 🔃  Recursion Depth       │ 4
+───────────────────────────┴──────────────────────
+ 🏁  Press [ENTER] to use the Scan Management Menu™
+──────────────────────────────────────────────────
+404      GET       84l      209w     3341c Auto-filtering found 404-like response and created new filter; toggle off with --dont-filter
+403      GET        7l       20w      199c Auto-filtering found 404-like response and created new filter; toggle off with --dont-filter
+301      GET        7l       20w      239c http://sea.htb/themes/bike/img => http://sea.htb/themes/bike/img/
+301      GET        7l       20w      239c http://sea.htb/themes/bike/css => http://sea.htb/themes/bike/css/
+200      GET        1l        1w        6c http://sea.htb/themes/bike/version
+200      GET       21l      168w     1067c http://sea.htb/themes/bike/LICENSE
+200      GET        1l        9w       66c http://sea.htb/themes/bike/summary
+[####################] - 4m     90010/90010   0s      found:5       errors:803    
+[####################] - 4m     30000/30000   129/s   http://sea.htb/themes/bike/ 
+[####################] - 4m     30000/30000   129/s   http://sea.htb/themes/bike/img/ 
+[####################] - 4m     30000/30000   130/s   http://sea.htb/themes/bike/css/ 
+```
+oh we got `/version`,`/summary`,`/license`and `css/`, Let's check them all
