--- a/_posts/1337-01-01-Sea.md
+++ b/_posts/1337-01-01-Sea.md
@@ -133,11 +133,13 @@ Lets google really quickly what is
 `turboblack`
 ![alt text](../pics/image-6.png)
 Okay the site is running cms called `wondercms`
-Now We can do something like this 
+# Search for public vulnerabilities
+Now We can do something like this googling on the cms name 
 ![alt text](../pics/image-7.png)
 Keep in mind the version we got is `3.2.0`
 Then we found this script 
 ![alt text](../pics/image-8.png)
+# Exploition
 Lets git clone it and use it 
 ```bash
 ┌──(kareem㉿Kali)-[~/sea/CVE-2023-41425-wonderCMS_RCE]
@@ -152,6 +154,7 @@ lets send this link the contact form we saw early on at `contact.php`
 then we got this 
 ![alt text](../pics/image-10.png)
 which is mean we got RCE lets mess with the shell we got 
+# Getting-User
 ![alt text](../pics/image-11.png)
 okay we can read the flag let's try to gather some other informations, Lets check the website files 
 ```json
