--- a/_posts/1337-01-01-Sea.md
+++ b/_posts/1337-01-01-Sea.md
@@ -235,3 +235,8 @@ amay@sea.htb's password:
 Last login: Mon Aug  5 07:16:49 2024 from 10.10.14.40
 ```
 we are in babyyy now i think we got the user flag let's try to get root
+# root
+![alt text](../pics/image-13.png)
+okay let's check if there is any open ports or anything interesting in the internal network by checking `netstat` and `ss` 
+then we found port 8080 running on the local host so we did port forwarding using ssh command `you can check that on my diaries` then we open it from the browser 
+![alt text](../pics/image-14.png)
