--- a/_posts/1337-01-01-Track1.md
+++ b/_posts/1337-01-01-Track1.md
@@ -1,5 +1,5 @@
 ---
-title: "baby interdimensional internet -HTB challenge"
+title: "HTB Web challenge-baby interdimensional internet"
 date: 1337-01-06 00:00:00 
 categories: [Hack The Box,Notes]
 tags: [HTB,CTFs]
@@ -7,3 +7,11 @@ tags: [HTB,CTFs]
 
 We will solve web challenge from HackTheBox called `baby interdimensional internet` \
 Let's get started!
+
+![alt text](../pics/image-16.png)
+
+okay lets check the source of the page 
+
+![alt text](../pics/image-17.png)
+
+we found this `<!-- /debug -->` , let's try requesting this endpoint :
